@@ -1,5 +1,6 @@
 package org.jeesl.factory.ejb.system.security;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Date;
 
 import org.jeesl.interfaces.model.system.security.user.JeeslUser;
@@ -24,13 +25,17 @@ public class EjbSecurityPasswordHistoryFactory <USER extends JeeslUser<?>,
 		HISTORY ejb = null;
     	try
     	{
-			ejb = cHistory.newInstance();
+			ejb = cHistory.getDeclaredConstructor().newInstance();
 			ejb.setUser(user);
 			ejb.setRecord(new Date());
 			ejb.setPwd(password);
 		}
     	catch (InstantiationException e) {e.printStackTrace();}
-    	catch (IllegalAccessException e) {e.printStackTrace();}
+		catch (IllegalAccessException e) {e.printStackTrace();}
+		catch (IllegalArgumentException e) {e.printStackTrace();}
+		catch (InvocationTargetException e) {e.printStackTrace();}
+		catch (NoSuchMethodException e) {e.printStackTrace();}
+		catch (SecurityException e) {e.printStackTrace();}
     	
     	return ejb;
 	}
