@@ -1,5 +1,7 @@
 package org.jeesl.factory.ejb.system.security;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.jeesl.factory.txt.system.security.TxtUserFactory;
 import org.jeesl.interfaces.model.system.security.user.JeeslUser;
 import org.slf4j.Logger;
@@ -21,12 +23,16 @@ public class EjbSecurityUserFactory <USER extends JeeslUser<?>>
 		USER ejb = null;
     	try
     	{
-			ejb = cUser.newInstance();
+			ejb = cUser.getDeclaredConstructor().newInstance();
 			ejb.setPermitLogin(false);
 			ejb.setSalt(TxtUserFactory.buildSalt());
 		}
     	catch (InstantiationException e) {e.printStackTrace();}
-    	catch (IllegalAccessException e) {e.printStackTrace();}
+		catch (IllegalAccessException e) {e.printStackTrace();}
+		catch (IllegalArgumentException e) {e.printStackTrace();}
+		catch (InvocationTargetException e) {e.printStackTrace();}
+		catch (NoSuchMethodException e) {e.printStackTrace();}
+		catch (SecurityException e) {e.printStackTrace();}
     	
     	return ejb;
 	}
